# airan-desk-android

./: .gitignore  .gitmodules  gradle.properties  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native_terminal_jni.cpp
app/src/main/java/com/wxalh/airan_desk/: AiranDeskBaseActivity.java  AiranDeskCallbacksActivity.java  AiranDeskDesktopActivity.java  AiranDeskDesktopInteractionActivity.java  AiranDeskFileActivity.java  AiranDeskHomeActivity.java  AiranDeskTerminalActivity.java  MainActivity.java  Md5Util.java
app/src/main/java/com/wxalh/airan_desk/config/: AppConfig.java
app/src/main/java/com/wxalh/airan_desk/file/: DirectoryStats.java  DownloadDirectoryProvider.java  FileSortUtils.java  LocalFileListResponseBuilder.java  LocalFileOpener.java  LocalFileUtils.java  MountedRootCollector.java  PickedFileCache.java  RemoteFileEntryUtils.java  TransferHistoryStore.java  TransferPathResolver.java
app/src/main/java/com/wxalh/airan_desk/input/: InputRateLimiter.java  KeyCodeMapper.java  KeyboardChord.java  KeyboardChordMapper.java  RemoteAndroidInputHandler.java  RemoteInputAccessibilityService.java
app/src/main/java/com/wxalh/airan_desk/model/: RemoteCredentials.java  RemoteSession.java  SessionInfo.java  TransferRecord.java
app/src/main/java/com/wxalh/airan_desk/network/: SignalingClient.java
app/src/main/res/values/: strings.xml
app/src/main/res/values-zh/: strings.xml
app/src/main/res/xml/: accessibility_service.xml  file_paths.xml  network_security_config.xml
(+63 files in other folders)
